END desktop style START mobile style

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -25,7 +25,12 @@
     color: inherit;
 }
 .navbar__burger{
-
+    width: 40px;
+    height: 40px;
+    /* le carré menu burger transparent dans la NavBAr */
+    background: transparent ;
+    border: none;
+    color: inherit; 
 }
 
 .burger-bar {
