--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+h1, p {
+margin-bottom: 1rem;
+}
+
 /* RESET */
 ul {
   list-style: none;
@@ -26,4 +30,10 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+.main{
+  /* padding TOP pour affciher en dessous de la NavBar */
+  min-height: 200vh;
+  padding:6rem 1rem 1rem;
 }
