--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -43,9 +43,12 @@
         align-items: center;   
         position: fixed;
         background-color: black;
-         /* on couvre la window de black */
+        /* on affiche tout le menu sur fond noir à la place du texte 
         left: 0;
-        right: 0;
+        right: 0; */
+        /* on fait disparaître tout le menu, on ne garde que le burger */
+        right:-100vh;
+
         bottom: 0;
         height: 100vh;
         padding:2rem;
@@ -61,7 +64,7 @@
     /* burger menuv*/
     .navbar__burger {
         display:block; /* on affiche le burger en mobile */
-        /* pour que le curseur pointe su rl'ensemble des 3 traits*/
+        /* pour que le curseur pointe sur l'ensemble des 3 traits*/
         position: fixed;
         top: 1rem;
         right: 1rem;
@@ -71,8 +74,6 @@
         cursor: pointer;
 
     }
-
-
 
     .burger-bar,
     .burger-bar::before,
