--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -67,6 +67,16 @@
         visibility:visible ;
     }
 
+    /* trait entre les menus */
+    .navbar__item::after {
+        content: "";
+        display: block;
+        margin: 0 auto;
+        width: 3vw;
+        height: 1px;
+        background: #FFF;
+    }
+
     /* style du menu */
     .navbar__link {
         display: block;
@@ -112,15 +122,16 @@
     }
     .show-nav .burger-bar::before {
         transform: rotate(45deg);
-        width: 15px;
+        width: 25px;
         height: 0.3px;
     }
     .show-nav .burger-bar::after {
         transform: rotate(-45deg);
-        width: 15px;
+        width: 25px;
         height: 0.3px;
     }}
     .show-nav .burger-bar {
+        /* masquer barre du milieu lors du 'transform to cross' */
         width: 0;
         background: transparent;
     }
