--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -59,6 +59,8 @@
         */
         visibility: hidden;
         background-color: black;
+        /* transition*/
+        transition: all .8s ease-out;
     }
 
     .show-nav .navbar__links {
@@ -75,6 +77,10 @@
         width: 3vw;
         height: 1px;
         background: #FFF;
+    }
+    /* on supprime le dernier sous 'contact' => le dernier enfant du <li>*/
+    .navbar__item:last-child::after {
+        display: none;
     }
 
     /* style du menu */
@@ -135,3 +141,31 @@
         width: 0;
         background: transparent;
     }
+
+    /* BONUS*/
+    /* burger button animation*/
+    .navbar__item {
+        transform: translateY(100vh);
+    }
+    .show-nav .navbar__item {
+        transform: translateY(0);
+    }
+
+    /* + tard le faire en js et changer les Seconde par incrémentation*/
+    .show-nav .slideInDown-1 {
+        transition: all 1s ease-out;
+    }
+    .show-nav .slideInDown-2 {
+        transition: all 1.1s ease-out;
+    }
+    .show-nav .slideInDown-3 {
+        transition: all 1.2s ease-out;
+    }
+    .show-nav .slideInDown-4 {
+        transition: all 1.3s ease-out;
+    }
+    .show-nav .slideInDown-5 {
+        transition: all 1.4s ease-out;
+    }
+
+
