--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,3 +1,4 @@
+
 .navbar {
     display: flex;
     /* ne pas dépasser sur les bords*/
@@ -12,17 +13,18 @@
     padding: 1rem;
     background-color: black;
     color: white;
+    transition: width 1.2s ease-out !important;
 }
-
 .navbar__links {
     /* en ligne */
     display: flex;
 }
 
 .navbar__link {
-    padding: 0 0.3rem;
+    padding: 0 0.7rem;
     /* hérité du parent */
     color: inherit;
+    color: aqua;
 }
 .navbar__burger{
     outline: none;
@@ -43,9 +45,9 @@
         justify-content: center;
         align-items: center;   
         position: fixed;
-        /* on affiche tout le menu sur fond noir à la place du texte 
+        /* on affiche tout le menu sur fond noir à la place du texte */
         left: 0;
-        right: 0; */
+        right: 0; 
         /* on masque le menu, on ne garde que le burger */
         right:-100vh;
         bottom: 0;
@@ -60,7 +62,7 @@
         visibility: hidden;
         background-color: black;
         /* transition*/
-        transition: all .8s ease-out;
+        transition: all 0.8s ease-out;
     }
 
     .show-nav .navbar__links {
@@ -129,43 +131,18 @@
     .show-nav .burger-bar::before {
         transform: rotate(45deg);
         width: 25px;
-        height: 0.3px;
+        height: 1px;
     }
     .show-nav .burger-bar::after {
         transform: rotate(-45deg);
         width: 25px;
-        height: 0.3px;
+        height: 1px;
     }}
     .show-nav .burger-bar {
         /* masquer barre du milieu lors du 'transform to cross' */
         width: 0;
         background: transparent;
     }
-
-    /* BONUS*/
-    /* burger button animation*/
-    .navbar__item {
-        transform: translateY(100vh);
-    }
-    .show-nav .navbar__item {
-        transform: translateY(0);
-    }
-
-    /* + tard le faire en js et changer les Seconde par incrémentation*/
-    .show-nav .slideInDown-1 {
-        transition: all 1s ease-out;
-    }
-    .show-nav .slideInDown-2 {
-        transition: all 1.1s ease-out;
-    }
-    .show-nav .slideInDown-3 {
-        transition: all 1.2s ease-out;
-    }
-    .show-nav .slideInDown-4 {
-        transition: all 1.3s ease-out;
-    }
-    .show-nav .slideInDown-5 {
-        transition: all 1.4s ease-out;
-    }
+  
 
 
